# meeting-scheduler

./: .gitignore  DOCKER_README.md  GOOGLE_OAUTH_SETUP.md  INTEGRATION_README.md  NOTIFICATION_README.md  README.md  SETUP_COMPLETE.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  docker.env  docker.env.example  email_config_options.env  package-lock.json  package.json  test_email.py  test_notifications.sh
backend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  env.example  init_db.py  main.py  pyproject.toml  requirements.txt  test_email.py  test_gmail_debug.py  test_main.py  test_mongodb.py
backend/app/: ai_service.py  auth.py  calendar_service.py  conversational_ai_service.py  database.py  email_reply_listener.py  google_calendar.py  meet_link.py  models.py  notification_service.py  rooms_catalog.py  services.py
frontend/: .dockerignore  .gitignore  Dockerfile.frontend  Dockerfile.frontend.dev  config-overrides.js  dev.sh  package-lock.json  package.json
frontend/src/: App.css  App.tsx  react-app-env.d.ts
frontend/src/components/: AuthCallback.tsx  CalendarView.tsx  ConversationalAI.tsx  Dashboard.tsx  EditEventForm.tsx  EditMeetingForm.tsx  EventForm.tsx  EventList.tsx  MeetingDetails.tsx  MeetingForm.tsx  MeetingList.tsx  Modal.tsx  NotificationComponent.css  NotificationComponent.tsx  PollDisplay.tsx  PollForm.tsx  UserProfileDropdown.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: OAuthCallback.tsx  PollPage.tsx
frontend/src/services/: AISchedulerService.ts  AuthService.ts  NotificationService.ts
frontend/src/types/: index.ts
frontend/src/utils/: timezone.ts
